[gd_scene load_steps=3 format=3 uid="uid://bj0kwv4dsl0i1"]

[ext_resource type="Theme" uid="uid://i4yc46f71ey1" path="res://ui/styles/themes/text_button.tres" id="1_d2jns"]
[ext_resource type="Script" uid="uid://bucqbucrgu1eb" path="res://ui/components/buttons/xarreta_button.gd" id="1_in52u"]

[node name="XarretaTextButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d2jns")
script = ExtResource("1_in52u")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
